--- a/src/componentes/ListagemTask/ListagemTask.css
+++ b/src/componentes/ListagemTask/ListagemTask.css
@@ -1,33 +1,90 @@
-.notas {
-    width: 100%;
+/* body {
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+} */
+
+.myContainer {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 20px;
+
+    /* max-width: 1200px; */
+    gap: 1rem;
 }
 
-.nota {
-    margin: 5px;
-    width: 7rem;
-    height: 7rem;
+.titulo {
+    color: black;
+    font-size: 10px;
 }
 
-.head {
+.square {
+    width: 10rem;
+    height: 10rem;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+}
+
+.header, .footer {
+    height: 20%;
     display: flex;
     justify-content: space-between;
-    background-color: gray;
-    width: 100%;
-    height: 20%;
-}
-
-.item {
-    margin-left: 5px;
-    margin-right: 5px;
+    align-items: center;
+    background-color: #f8f8f8;
+    border-bottom: 1px solid #ddd;
 }
 
 .footer {
-    align-content: end;
-    display: flex;
-    background-color: aqua;
-    justify-content: space-between;
-    font-size: 8px;
     color: black;
+    font-size: 8px;
+    border-top: 1px solid #ddd;
+    border-bottom: none;
+}
+
+.body {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+.btn-left, .btn-right {
+    border: none;
+    padding: 0.2rem 0.5rem;
+    cursor: pointer;
+    
+}
+
+.btn-left {
+    margin-right: auto;
+}
+
+.btn-right {
+    margin-left: auto;
+}
+
+.azul {
+    background-color: aqua;
+}
+
+.vermelho {
+    background-color: red;
+}
+
+.verde {
+    background-color: rgb(0, 255, 0);
+}
+
+.cinza {
+    background-color: gray;
 }
